# au-study

fl_hw4/: TestLexer.java  build.bat  clean.bat  llang.jflex  readme.txt  run.bat  run.sh  test1_output.txt  test2.p  test2_output.txt  test3.p  test3_output.txt  test4.p  test4_output.txt  tokens.cup
fl_hw5/: Makefile  pom.xml
fl_hw5/src/main/antlr4/: Llang.g4
fl_hw5/src/main/java/: Main.java
fl_hw5/tests/: test3.txt
fl_hw6/: hw.cabal  readme.txt  run.sh
fl_hw6/app/: Lexer.hs  Main.hs  MainOpt.hs  MainOptOnly.hs  MainParse.hs  MainPrint.hs  MainTests.hs  Opt.hs  Parser.hs  Reader.hs  Syntax.hs
fl_hw6/ex/: ex1.txt  ex2.txt  ex3.txt  ex_a1.txt  ex_out.txt
ml_hw1/: Untitled0.ipynb  converter.py
