name:                hw
version:             0.1.0.0
build-type:          Simple
cabal-version:       >=1.10

executable hw
  default-language:    Haskell2010
  main-is:             Main.hs
  build-depends:
      base                 >= 4.6
    , haskeline            >= 0.7.1.2
    , parsec               >= 3.1
    , mtl                  >= 2.1.3
    , transformers         >= 0.3.0.0 && < 0.5
  hs-source-dirs:      app
