name:                hw
version:             0.1.0.0
build-type:          Simple
cabal-version:       >=1.10

executable hw_parse
  default-language:    Haskell2010
  main-is:             MainParse.hs
  build-depends:
      base                 >= 4.6
    , containers           >= 0.5.0.0
    , haskeline            >= 0.7.1.2
    , parsec               >= 3.1
    , mtl                  >= 2.1.3
    , transformers         >= 0.3.0.0 && < 0.5
    , pretty-tree          >= 0.1.0.0
  hs-source-dirs:      app

executable hw_print
  default-language:    Haskell2010
  main-is:             MainPrint.hs
  build-depends:
      base                 >= 4.6
    , containers           >= 0.5.0.0
    , haskeline            >= 0.7.1.2
    , parsec               >= 3.1
    , mtl                  >= 2.1.3
    , transformers         >= 0.3.0.0 && < 0.5
    , pretty-tree          >= 0.1.0.0
  hs-source-dirs:      app

executable hw_opt
  default-language:    Haskell2010
  main-is:             MainOpt.hs
  build-depends:
      base                 >= 4.6
    , containers           >= 0.5.0.0
    , haskeline            >= 0.7.1.2
    , parsec               >= 3.1
    , mtl                  >= 2.1.3
    , transformers         >= 0.3.0.0 && < 0.5
    , pretty-tree          >= 0.1.0.0
  hs-source-dirs:      app

executable hw_opt_only
  default-language:    Haskell2010
  main-is:             MainOptOnly.hs
  build-depends:
      base                 >= 4.6
    , containers           >= 0.5.0.0
    , haskeline            >= 0.7.1.2
    , parsec               >= 3.1
    , mtl                  >= 2.1.3
    , transformers         >= 0.3.0.0 && < 0.5
    , pretty-tree          >= 0.1.0.0
  hs-source-dirs:      app

executable hw_tests
  default-language:    Haskell2010
  main-is:             MainTests.hs
  build-depends:
      base                 >= 4.6
    , containers           >= 0.5.0.0
    , haskeline            >= 0.7.1.2
    , parsec               >= 3.1
    , mtl                  >= 2.1.3
    , transformers         >= 0.3.0.0 && < 0.5
    , pretty-tree          >= 0.1.0.0
    , HUnit                >= 1.3.1.1
  hs-source-dirs:      app
